# copilot-test

./: .env.example  .gitignore  API_SETUP.md  Dockerfile  LICENSE  Makefile  PYTHON_BEST_PRACTICES.md  README.md  main.py  pyproject.toml  requirements.txt  setup.py  test.py
.github/: copilot-instructions.md
.github/agents/: python-v1-org-level.agent.md  python-v1.agent.md
entity_resolver/: main.py
entity_resolver/cli/: cli.py
entity_resolver/config/: config.py  logging_config.py
entity_resolver/entity/: entity.py
entity_resolver/service/: resolve_service.py
examples/: mock_api_server.py
src/entity_resolver/: __init__.py  api_client.py  cli.py
test/: conftest.py
test/cli/: test_cli.py
test/entity/: test_entity.py
test/service/: test_resolve_service.py
tests/: test_api_client.py  test_cli.py
